src/app.css
@import 'tailwindcss';

@plugin "daisyui" {
  themes: dark --default;
}

@plugin "@tailwindcss/typography";

html {
  scrollbar-gutter: stable;
}

body {
  background-image: url('$lib/assets/bg_eyup.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 100vh;
}

